--- a/marketapp/listings/templates/images/edit_image.html
+++ b/marketapp/listings/templates/images/edit_image.html
@@ -27,7 +27,7 @@
             {% endif %}
           </p>
         {% endfor %}
-        <button type="btn submit" class="btn btn-blue form-button image-form-button">Upload</button>
+        <button type="btn submit" class="btn btn-blue form-button image-form-button">Update</button>
       </form>
     </div>
   </div>
