--- a/marketapp/listings/templates/listings/create_bid.html
+++ b/marketapp/listings/templates/listings/create_bid.html
@@ -1,21 +1,30 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<h2>Place a Bid</h2>
-<form enctype="multipart/form-data" method="post" action="">
-  {% csrf_token %}
-  {% for field in form %}
-    <p>
-      {{ field.label_tag }}
-      {{ field }}
-      {% if field.help_text %}
-        <br><small style="color: grey">{{ field.help_text }}</small>
-      {% endif %}
-      {% for error in field.errors %}
-        <p style="color: red">{{ error }}</p>
-      {% endfor %}
-    </p>
-  {% endfor %}
-  <button type="btn submit" class="btn btn-blue">Place Bid</button>
-</form>
+  <div class="center-block col-lg-10">
+    <h2 style="text-align: center;">Place a Bid</h2>
+    <div class="form-container-bids center-block">
+      <form enctype="multipart/form-data" method="post" action="">
+        {% csrf_token %}
+        {% for field in form %}
+          <p>
+            <div style="block">
+            <div style="display: inline-block;">
+              {{ field.label_tag }}
+            </div>
+            <div class="form-field-items">
+              {{ field }}
+            </div>
+            {% if field.help_text %}
+              <br><small style="color: grey">{{ field.help_text }}</small>
+            {% endif %}
+            {% for error in field.errors %}
+              <p style="color: red">{{ error }}</p>
+            {% endfor %}
+          </p>
+        {% endfor %}
+        <button type="btn submit" class="btn btn-blue form-button">Place Bid</button>
+      </form>
+    </div>
+  </div>
 {% endblock %}
