Restricted the views for all listings of a certain type to only show those in a 20 mile radius from the user

--- a/marketapp/listings/templates/wishlists/all_wishlist_listings.html
+++ b/marketapp/listings/templates/wishlists/all_wishlist_listings.html
@@ -5,6 +5,11 @@
     <div class="center-block" style="text-align: center;">
       <div>
         <h1>All Wishlist Listings</h1>
+        <h6>
+          Only listings in a 20 mile radius from you will be shown here.<br>
+          To find listings in a broader radius, use our helpful
+          <a href=""><b>search tool</b></a>!
+        </h6>
       </div>
     </div>
   </div>
