--- a/marketapp/listings/templates/search/search.html
+++ b/marketapp/listings/templates/search/search.html
@@ -4,18 +4,46 @@
   <div class="container-fluid col-lg-10 center-block listings-container">
     <div class="center-block" style="text-align: center;">
       <div>
-        <h1>Search Listings Listings</h1>
+        <h1>Search Listings</h1>
       </div>
     </div>
-    <div class="col-lg-12 align-center">
-      <i id="search-icon" class="fas fa-search"></i>
-      <input id="user-input" placeholder="Search Listings...">
-      <select id="tags" name="tags">
-        <option value=""></option>
-      </select>
+    <div style="text-align: center;">
+      <div class="search-block-1">
+        <div class="search-field">
+          Name:
+          <input id="user-input" placeholder="Search Listings..." class="search-option">
+        </div>
+        <div class="search-field-2">
+          Listing Type:
+          <select id="listing-types" name="listing-types" class="search-option">
+            <option value="Offers">Offer Listings</option>
+            <option value="Auctions">Auction Listings</option>
+            <option value="Wishlists">Wishlist Listings</option>
+          </select>
+        </div>
+        <div class="search-field-3">
+          Search Radius:
+          <select id="search-radius" name="search-radius" class="search-option">
+            <option value="0.3400">20 miles</option>
+            <option value="0.5000">30 miles</option>
+            <option value="0.6700">40 miles</option>
+            <option value="0.8300">50 miles</option>
+          </select>
+        </div>
+      </div>
+      <div class="search-block-2">
+        <span style="vertical-align: top; display: inline-block; margin-right: 3px;">Tags:</span>
+        <select id="tags" name="tags" multiple>
+          {% for tag in tags %}
+            <option value="{{ tag.name }}">{{ tag.name }}</option>
+          {% endfor %}
+        </select>
+      </div>
     </div>
   </div>
-  <div id="listings-content" class="col-lg-10">
-    {% include '/listings/search/results.html' %}
+  <div class="col-lg-10 center-block">
+    <div id="listings-content">
+      {% include 'search/results.html' %}
+    </div>
   </div>
 {% endblock %}
