Added documentation for searching for listings

--- a/marketapp/listings/templates/FAQ/documents.html
+++ b/marketapp/listings/templates/FAQ/documents.html
@@ -14,6 +14,7 @@
     <li><a href="{% url 'faq-listings' %}">Listings Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-profiles' %}">Profile Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-receipts' %}">Receipts and Payments Documentation/FAQ</a></li>
+    <li><a href="{% url 'faq-search' %}">Search Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-wishlists' %}">Wishlists Documentation/FAQ</a></li>
   </ul>
 {% endblock %}
