--- a/marketapp/listings/templates/listings/all_auction_listings.html
+++ b/marketapp/listings/templates/listings/all_auction_listings.html
@@ -8,7 +8,7 @@
         <h6>
           Only listings in a 20 mile radius from you will be shown here.<br>
           To find listings in a broader radius, use our helpful
-          <a href=""><b>search tool</b></a>!
+          <a href="{% url 'search-listings' %}"><b>search tool</b></a>!
         </h6>
       </div>
     </div>
