--- a/marketapp/listings/templates/listings/offer_listing_detail.html
+++ b/marketapp/listings/templates/listings/offer_listing_detail.html
@@ -69,8 +69,13 @@
         {% endif %}
       </div>
       <a href="{% url 'create-offer' pk=offerlisting.pk %}">
-        <div class="btn btn-green listing-btn center-block" style="margin-bottom: 20px;">
+        <div class="btn btn-green listing-btn center-block" style="margin-bottom: 10px;">
           Make an Offer
+        </div>
+      </a>
+      <a href="{% url 'report-listing' pk=offerlisting.pk %}">
+        <div class="btn btn-red listing-btn center-block" style="margin-bottom: 20px;">
+          Report Listing
         </div>
       </a>
     {% endif %}
