--- a/marketapp/listings/static/css/styles.css
+++ b/marketapp/listings/static/css/styles.css
@@ -108,7 +108,8 @@
 }
 
 .more-dropdown a {
-  width: 48px;
+  width: 85px;
+  text-align: center;
 }
 
 .btn-blue {
@@ -1345,4 +1346,18 @@ input[type="checkbox"]{
   height: 90px;
   top: 4px;
   position: relative;
+}
+
+.report-container {
+  background: #d4d4d4;
+  border: 3px solid grey;
+  border-radius: 15px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.report-description {
+  background: white;
+  padding: 5px;
+  border-radius: 5px;
 }
