--- a/marketapp/listings/templates/reports/report_event.html
+++ b/marketapp/listings/templates/reports/report_event.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="center-block col-lg-10">
-    <h2 style="text-align: center;">Report Listing</h2>
+    <h2 style="text-align: center;">Report Event</h2>
     <div class="form-container-reports center-block">
       <form enctype="multipart/form-data" method="post" action="">
         {% csrf_token %}
