--- a/marketapp/listings/templates/base_generic.html
+++ b/marketapp/listings/templates/base_generic.html
@@ -103,10 +103,10 @@
             <div class="dropdown">
               <div class="site-nav-url dropbtn" style="margin-left: -3px; width: 85px; text-align: center;">More...</div>
               <div class="dropdown-content more-dropdown">
-                <li class="site-nav-url" style="margin-left: -3px; width: 85px; padding-left: 18px;"><a href="{% url 'faq' %}">FAQ</a></li>
-                <li class="site-nav-url" style="margin-left: -3px; width: 85px; padding-left: 18px;"><a href="{% url 'users' %}">Users</a></li>
+                <li class="site-nav-url" style="margin-left: -3px; width: 85px;"><a href="{% url 'faq' %}">FAQ</a></li>
+                <li class="site-nav-url" style="margin-left: -3px; width: 85px;"><a href="{% url 'users' %}">Users</a></li>
                 {% if request.user.is_superuser %}
-                  <li class="site-nav-url" style="margin-left: -3px; width: 85px; padding-left: 15px;"><a href="{% url 'reports' %}">Reports</a></li>
+                  <li class="site-nav-url" style="margin-left: -3px; width: 85px;"><a href="{% url 'reports' %}">Reports</a></li>
                 {% endif %}
               </div>
             </div>
