--- a/marketapp/listings/templates/events/event_detail.html
+++ b/marketapp/listings/templates/events/event_detail.html
@@ -38,7 +38,13 @@
     {% if request.user != event.host %}
       <a onclick="return confirm('Are you sure you want to drop out from the event?')"
         href="{% url 'remove-participant' event_pk=event.pk user_pk=request.user.pk %}">
-        <span class="btn btn-red center-block" style="width: 120px; margin-top: 20px;">Leave Event</span>
+        <span class="btn btn-red center-block" style="width: 120px; margin-top: 20px;
+          margin-bottom: 10px;">Leave Event</span>
+      </a>
+      <a href="{% url 'report-event' pk=event.pk %}">
+        <div class="btn btn-red listing-btn center-block" style="margin-bottom: 20px;">
+          Report Event
+        </div>
       </a>
     {% endif %}
   </div>
