Added documentation for reporting an event

--- a/marketapp/listings/templates/FAQ/reports.html
+++ b/marketapp/listings/templates/FAQ/reports.html
@@ -12,5 +12,15 @@
       are reporting the listing.  Once you have added all the fields, click on
       the "Report" button at the bottom of the container to send the report.
       The report will then be taken care of by an admin.</p>
+    <h1>How to Report an Event</h1>
+    <p>You can report events you have joined that you feel concerned about.  In
+      order to do so, visit the list of events that you are an active participant
+      in and click on the name of the event that you are concerned with.  On the
+      event detail page, scroll to the bottom and there will be a button that says
+      "Report Event".   When reporting an event, select a reason for the report
+      and add a description to explain in depth why you are reporting the event.
+      Once you have added all the fields, click on the "Report" button at the
+      bottom of the container to send the report.  The report will then be
+      taken care of by an admin.</p>
   </div>
 {% endblock %}
