Implemented form and view for reporting users and added documentation on how to report a user

--- a/marketapp/listings/templates/FAQ/reports.html
+++ b/marketapp/listings/templates/FAQ/reports.html
@@ -22,5 +22,16 @@
       Once you have added all the fields, click on the "Report" button at the
       bottom of the container to send the report.  The report will then be
       taken care of by an admin.</p>
+    <h1>How to Report a User</h1>
+    <p>You can report users that make you feel uncomfortable, are harrassing you,
+      or are attempting to scam you or others.  To report a user, click on the user's
+      name that you want to report to view their profile.  On their profile page,
+      in the top right corner there will be a button that says "Report User".  On the
+      event detail page, scroll to the bottom and there will be a button that says
+      "Report User".  When reporting a user, select a reason for the report and
+      add a description to explain in depth why you are reporting the user.
+      Once you have added all the fields, click on the "Report" button at the
+      bottom of the container to send the report.  The report will then be taken
+      care of by an admin.</p>
   </div>
 {% endblock %}
