Implemented form, view and documentation for reporting an image

--- a/marketapp/listings/templates/FAQ/reports.html
+++ b/marketapp/listings/templates/FAQ/reports.html
@@ -41,5 +41,14 @@
       reporting the wishlist. Once you have added all the fields, click on the
       "Report" button at the bottom of the container to send the report.
       The report will then be taken care of by an admin.</p>
+    <h1>How to Report a Image</h1>
+    <p>To report a image that you feel contains inappropriate or concerning
+      content, click on the item that contains the image of concern.  On the
+      item's detail page, for each image related to the item, there will be a
+      button beneath the image that says "Report Image".  When reporting a user,
+      select a reason for the report and add a description to explain in depth
+      why you are reporting the image. Once you have added all the fields,
+      click on the "Report" button at the bottom of the container to send the
+      report.  The report will then be taken care of by an admin.</p>
   </div>
 {% endblock %}
