Added documentation on leaving ratings on profiles

--- a/marketapp/listings/templates/FAQ/documents.html
+++ b/marketapp/listings/templates/FAQ/documents.html
@@ -13,6 +13,7 @@
     <li><a href="{% url 'faq-items' %}">Items Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-listings' %}">Listings Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-profiles' %}">Profile Documentation/FAQ</a></li>
+    <li><a href="{% url 'faq-ratings' %}">Ratings Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-receipts' %}">Receipts and Payments Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-reports' %}">Reports Documentation/FAQ</a></li>
     <li><a href="{% url 'faq-search' %}">Search Documentation/FAQ</a></li>
