--- a/marketapp/listings/templates/FAQ/reports.html
+++ b/marketapp/listings/templates/FAQ/reports.html
@@ -17,7 +17,7 @@
       order to do so, visit the list of events that you are an active participant
       in and click on the name of the event that you are concerned with.  On the
       event detail page, scroll to the bottom and there will be a button that says
-      "Report Event".   When reporting an event, select a reason for the report
+      "Report Event".  When reporting an event, select a reason for the report
       and add a description to explain in depth why you are reporting the event.
       Once you have added all the fields, click on the "Report" button at the
       bottom of the container to send the report.  The report will then be
@@ -36,7 +36,7 @@
     <p>To report a wishlist that you feel contains inappropriate or concerning
       content, click on the button that takes you to the wishlist from a user's listing
       or from their profile page.  Oh the wishlist detail page, there will be a
-      button that says "Report Wishlist".  When reporting a user, select a reason
+      button that says "Report Wishlist".  When reporting a wishlist, select a reason
       for the report and add a description to explain in depth why you are
       reporting the wishlist. Once you have added all the fields, click on the
       "Report" button at the bottom of the container to send the report.
@@ -45,10 +45,19 @@
     <p>To report a image that you feel contains inappropriate or concerning
       content, click on the item that contains the image of concern.  On the
       item's detail page, for each image related to the item, there will be a
-      button beneath the image that says "Report Image".  When reporting a user,
+      button beneath the image that says "Report Image".  When reporting an image,
       select a reason for the report and add a description to explain in depth
       why you are reporting the image. Once you have added all the fields,
       click on the "Report" button at the bottom of the container to send the
       report.  The report will then be taken care of by an admin.</p>
+    <h1>How to Report a Rating</h1>
+    <p>To report a rating you received that you feel is inapproriate, false,
+      or of any other concern, you can report it by clicking on the "Report" button
+      in the top right of the container of the rating from your profile.
+      When reporting a rating, select a reason for the report and add a
+      description to explain in depth why you are reporting the rating.
+      Once you have added all the fields, click on the "Report" button at the
+      bottom of the container to send the report.  The report will then be taken
+      care of by an admin.</p>
   </div>
 {% endblock %}
